--- a/src/overview.html
+++ b/src/overview.html
@@ -6,7 +6,7 @@
 
   <body>
 
-    <P>WebGraph is a framework to study the web graph. It provides simple ways to manage
+    <P>WebGraph is a framework for graph compression aimed at studying web graphs. It provides simple ways to manage
 	very large graphs, exploiting modern compression techniques.  
 	The big version is a fork of the original WebGraph that can handle more than 2<sup>31</sup> 
 	nodes. For more details on WebGraph that are common between the standard and the big
@@ -16,7 +16,7 @@
 
 	<h1>Main differences</h1>
 	
-	<p>If you are used to WebGraph, the main difference is that, of course, nodes are
+	<p>If you are used to WebGraph, the main difference is that nodes are
 	indexed by long integers. Correspondingly, iterators on nodes are 
 	{@link it.unimi.dsi.big.webgraph.LazyLongIterator}s, and all array-based methods
 	(such as {@link it.unimi.dsi.big.webgraph.ImmutableGraph#successorBigArray(long)} or 
@@ -33,7 +33,7 @@
 	cannot be accessed like a standard Java array. Watch out in particular for accesses to the
 	<code>length</code> field, which will be syntactically correct even on a big array, but
 	<strong>must</strong> be replaced by calls to a suitable method (e.g., 
-	{@link it.unimi.dsi.fastutil.longs.LongBigArrays#length(long[][])}). In general, you
+	{@link it.unimi.dsi.fastutil.BigArrays#length(long[][])}). In general, you
 	must get accustomed to big-array methods before porting code.
 	
 	<p>To simplify many mundane matters, such as unit tests, {@link it.unimi.dsi.big.webgraph.ImmutableGraph}
@@ -46,8 +46,8 @@
 
 	<h1>Compatibility</h1>
 	
-	<p>The serialisation format of the standard and big versions of {@link it.unimi.dsi.webgraph.BVGraph} are compatible (of
-	course, you cannot load a graph with more than 2<sup>31</sup> elements using the standard version). The <em>same</em>
+	<p>The serialisation format of the standard and big versions of {@link it.unimi.dsi.webgraph.BVGraph} are compatible (but
+	you cannot load a graph with more than 2<sup>31</sup> elements using the standard version). The <em>same</em>
 	graph loaded with instances of the two classes, however, will not by {@linkplain java.lang.Object#equals(Object) equal}.
 	You must wrap one or the other (see above) to check for equality.
 	
